remove usage of harbor, implement adr-006
[#187074138]

remove usage of harbor and ensure each task has an image attribute set
so we can manage ci task images as concourse resources.

switch back ci to run tasks from `bbr-pipeline-tasks` repo with the `image-bbr-pipeline-tasks`.
The whole point of this repo is to have a set of tasks bundled with a compatible image. When the
pipeline for this repo was moved to runway, it was overlooked that executing the pipeline also
should test the underlying docker image ( built specifically for these tasks ).

the dockerfile has been updated so that it's base image can be pulled from an accessible registry
and preloaded ( avoiding implicit docker pulls ) into the oci build task.

fly-by:
- replace docker-image with registry-imgae
- converge on cryogenics-essentials where possible

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,9 @@
-FROM ubuntu:xenial
+ARG REGISTRY=docker.io
+ARG BASE_IMAGE=ubuntu:latest
+# as of 2024/03/28, comment taken from https://hub.docker.com/_/ubuntu h1: "What's in this image?"
+# The ubuntu:latest tag points to the "latest LTS", since that's the version recommended for general use. The ubuntu:rolling tag points to the latest release (regardless of LTS status).
+# additionally the FROM is parametrized so we can provide the base image layer without the implicit docker pull at build time.This avoid docker rate limitation in CI
+FROM ${REGISTRY}/${BASE_IMAGE}
 
 RUN apt-get update && apt-get install -y \
   openssh-client \
