update missing resource types gcs
Signed-off-by: Rui Yang <rui.yang@broadcom.com>

--- a/ci/pipelines/pas-pipeline-tasks/pipeline.yml
+++ b/ci/pipelines/pas-pipeline-tasks/pipeline.yml
@@ -508,6 +508,8 @@ resource_types:
   type: registry-image
   source:
     repository: frodenas/gcs-resource
+    username: ((docker.username))
+    password: ((docker.password))
 
 resources:
 - name: image-bbr-pipeline-tasks
