pull image from dockerhub (#138)
* pull image from dockerhub

Harbor is EOL.

Signed-off-by: Rui Yang <rui.yang@broadcom.com>

* update missing resource types gcs

Signed-off-by: Rui Yang <rui.yang@broadcom.com>

* update bot reference to tas-operability bot

Signed-off-by: Rui Yang <rui.yang@broadcom.com>

* fix linter error for docker secrets

Signed-off-by: Rui Yang <rui.yang@broadcom.com>

---------

Signed-off-by: Rui Yang <rui.yang@broadcom.com>

--- a/ci/pipelines/pas-pipeline-tasks/pipeline.yml
+++ b/ci/pipelines/pas-pipeline-tasks/pipeline.yml
@@ -23,6 +23,9 @@ secrets:
   bucket: ((om-backup-artifact.backup-bucket))
   json_key: ((om-backup-artifact.gcs-json-key))
 
+- &docker_creds
+  username: ((docker.username))
+  password: ((docker.password))
 
 #! **************
 #! End of secrets
@@ -66,8 +69,8 @@ jobs:
       - name: branch_name
       - name: source-repo
       params:
-        COMMIT_USERNAME: Cryogenics CI Bot
-        COMMIT_USEREMAIL: mapbu-cryogenics@groups.vmware.com
+        COMMIT_USERNAME: Tas Operability Bot
+        COMMIT_USEREMAIL: tas-operability.pdl@broadcom.com
       run:
         path: /bin/bash
         args:
@@ -108,7 +111,7 @@ jobs:
       LABELS: ci-trigger
       TITLE: ci-((.:pr_branch_name))
       MESSAGE: |
-        This is an automatically generated Pull Request from the Cryogenics CI Bot.
+        This is an automatically generated Pull Request from the Tas Operability Bot.
         It is used to automatically create a PR against this repo to regularly trigger
         CI to test the tasks against new TAS Versions
 
@@ -487,12 +490,14 @@ resource_types:
 - name: pivnet
   type: registry-image
   source:
-    repository: harbor-repo.vmware.com/dockerhub-proxy-cache/pivotalcf/pivnet-resource
+    <<: *docker_creds
+    repository: pivotalcf/pivnet-resource
     tag: latest-final
 - name: pull-request
   type: registry-image
   source:
-    repository: harbor-repo.vmware.com/dockerhub-proxy-cache/cryogenics/pr-queue-resource
+    <<: *docker_creds
+    repository: cryogenics/pr-queue-resource
 
 - name: shepherd
   source:
@@ -503,12 +508,14 @@ resource_types:
 - name: gcs
   type: registry-image
   source:
+    <<: *docker_creds
     repository: frodenas/gcs-resource
 
 resources:
 - name: image-bbr-pipeline-tasks
   source:
-    repository: harbor-repo.vmware.com/dockerhub-proxy-cache/pcfplatformrecovery/bbr-pcf-pipeline-tasks
+    <<: *docker_creds
+    repository: pcfplatformrecovery/bbr-pcf-pipeline-tasks
     tag: final
   type: registry-image
 
@@ -541,7 +548,8 @@ resources:
 - name: image-cryogenics-essentials
   type: registry-image
   source:
-    repository: harbor-repo.vmware.com/dockerhub-proxy-cache/cryogenics/essentials
+    <<: *docker_creds
+    repository: cryogenics/essentials
 
 - name: bbr-pipeline-tasks-repo
   type: pull-request
@@ -600,7 +608,7 @@ resources:
     service-account-key: *shepherd_sa_key
     compatibility-mode: environments-app
     lease:
-      namespace: cryogenics
+      namespace: tas-operability
       pool:
         namespace: official
         name: #@ v["pool_name"]
